# R-TYPE

./: CMakeLists.txt  Dockerfile  LICENSE.md  README.md  build.window.sh  build_linux.sh  clean.sh  vcpkg.json
Test/: NetworkTest.cpp
assets/Utilities/: shader.vert
documentation/: ECS-documentation.md  RFC_protocol.txt
documentation/html/: AIComponent_8hpp_source.html  AnimationComponent_8hpp_source.html  AnimationSystem_8hpp_source.html  Bullet_8hpp_source.html  Client_8hpp_source.html  CollisionComponent_8hpp_source.html  CollisionSystem_8hpp_source.html  DamageComponent_8hpp_source.html  DeadComponent_8hpp_source.html  DestroyAnimSystem_8hpp_source.html  DestroyedComponent_8hpp_source.html  DrawableComponent_8hpp_source.html  DropableComponent_8hpp_source.html  Enemy_8hpp_source.html  Entity_8hpp_source.html  GameOverSystem_8hpp_source.html  GameVariable_8hpp_source.html  GuiComponent_8hpp_source.html  GuiSystem_8hpp_source.html  HealthComponent_8hpp_source.html  Hostconnexion_8hpp_source.html  InputComponent_8hpp_source.html  InstanceGame_8hpp_source.html  ItemSystem_8hpp_source.html  Item_8hpp_source.html  Logging_8hpp_source.html  MobEnemy_8hpp_source.html  MouvementSystem_8hpp_source.html  Player_8hpp_source.html  PositionComponent_8hpp_source.html  Registry_8hpp_source.html  Render_8hpp_source.html  ScaleComponent_8hpp_source.html  SceneComponent_8hpp_source.html  Scene_8hpp_source.html  ScoreComponent_8hpp_source.html  ShootSystem_8hpp_source.html  ShootableComponent_8hpp_source.html  SoundComponent_8hpp_source.html  SoundSystem_8hpp_source.html  (+144 more)
include/Client/: Client.hpp
include/GameEngine/: GameVariable.hpp
include/Network/: Serialise.hpp  network.hpp  packets.hpp
(+100 files in other folders)
